# desk-ops

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
desk_ops_env/: __init__.py  models.py  tasks.py
desk_ops_env/server/: __init__.py  app.py  desk_ops_environment.py
scripts/: offline_eval.py  pytorch_policy.py
server/: app.py
tests/: test_environment.py  test_tasks.py
